# Smart-Ai-Support-Assistant

./: README.md
backend/: .env.example  main.py  pyproject.toml  railway.toml  render.yaml
backend/core/: config.py  session_store.py
backend/routers/: ask.py  ingest.py
backend/schemas/: models.py
backend/services/: chunker.py  embedder.py  llm.py  vector_store.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/chat/: chat-input.tsx  chat-message.tsx  markdown-renderer.tsx
frontend/components/ui/: animated-theme-toggler.tsx
frontend/components/views/: chat-interface.tsx  knowledge-input.tsx
frontend/constants/: api-routes.ts
frontend/contexts/: session-context.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: api.ts
